Apply SVG viewport clips in PaintLayer; paint background of replaced like boxes.

This patch:

1. Starts painting the background of LayoutReplaced elements in the background
phase, rather than the foreground phase. This makes them behave like other boxes.

2. Because of 1, we can now treat overflow clips that apply to replaced elements
like other overflow clips; in particular this applies to SVG root viewport clips.
Now these clips are applied in PaintLayer for self-painting PaintLayer SVG
root elements, and BoxClipper otherwise clips them.

3. Replaced outlines already paint in the outline phase; removed unneeded
code in SVGRootPainter related to that.

BUG=680325
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2624383002
Cr-Commit-Position: refs/heads/master@{#443804}

Former-commit-id: 4180b2e34325e450db3d4feb3c09b58ced38e98a